--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 18
+          cache: 'npm'
 
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        uses: npm install
 
       - name: Build project
         run: npm run predeploy
