--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        uses: npm install
+        run: npm install
 
       - name: Build project
         run: npm run predeploy
